--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         
+        
         {
-            "type": "node",
+            "type": "chrome",
             "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "${workspacefolder}/app.js"
-            ],
-            "program": "${file}"
-        }
+            "name": "Launch Chrome",
+            "url": "http://localhost:5500",
+            "webRoot": "${workspaceFolder}/public"
+        },
+ 
     ]
 }
